[gd_scene load_steps=14 format=3 uid="uid://dyekoyo1wi1wn"]

[ext_resource type="Script" path="res://Characters/PCs/Ranger/Ranger.gd" id="1_30svg"]
[ext_resource type="Texture2D" uid="uid://dnxp837jin7xo" path="res://Characters/PCs/Ranger/Ranger.png" id="2_fi6hc"]
[ext_resource type="Script" path="res://Characters/PCs/camera_2d.gd" id="3_gpdiw"]
[ext_resource type="Texture2D" uid="uid://xgnsofidqvkm" path="res://temp/Target.png" id="4_vdfc8"]
[ext_resource type="FontFile" uid="uid://cv44u08rsmf26" path="res://temp/Aleo-Black.ttf" id="5_8sytb"]
[ext_resource type="Texture2D" uid="uid://cjd24kt8iifgi" path="res://temp/X.png" id="6_g6ej4"]
[ext_resource type="Texture2D" uid="uid://v2uku1n4e7s8" path="res://Characters/PCs/Ranger/Ranger_Portrait.png" id="7_yad41"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_j5j14"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:player_data")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:player_id")
properties/2/spawn = true
properties/2/replication_mode = 2
properties/3/path = NodePath(".:initiative")
properties/3/spawn = true
properties/3/replication_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vaaew"]
size = Vector2(70, 70)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ewso1"]
bg_color = Color(0, 0, 0, 0.290196)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8qa81"]
bg_color = Color(0.486275, 0.768627, 0.541176, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gcc4i"]
bg_color = Color(0, 0, 0, 0.290196)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vsbn"]
bg_color = Color(0.486275, 0.607843, 0.768627, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="Ranger" type="Area2D" groups=["player"]]
z_index = 5
collision_mask = 6
script = ExtResource("1_30svg")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.1
delta_interval = 0.1
replication_config = SubResource("SceneReplicationConfig_j5j14")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_fi6hc")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vaaew")

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
collision_mask = 7
collide_with_areas = true
collide_with_bodies = false

[node name="Camera2D" type="Camera2D" parent="."]
top_level = true
script = ExtResource("3_gpdiw")

[node name="TargetIcon" type="Sprite2D" parent="."]
visible = false
top_level = true
texture = ExtResource("4_vdfc8")

[node name="GUI_Global" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Attributes" type="Control" parent="GUI_Global"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="HealthBar" type="ProgressBar" parent="GUI_Global/Attributes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -94.0
offset_right = 35.0
offset_bottom = -84.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_ewso1")
theme_override_styles/fill = SubResource("StyleBoxFlat_8qa81")
step = 1.0
value = 100.0
show_percentage = false

[node name="HealthLbl" type="Label" parent="GUI_Global/Attributes/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.5
offset_right = 21.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_8sytb")
theme_override_font_sizes/font_size = 8
text = "100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ArmorBar" type="ProgressBar" parent="GUI_Global/Attributes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -35.0
offset_top = -84.0
offset_right = 35.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_gcc4i")
theme_override_styles/fill = SubResource("StyleBoxFlat_6vsbn")
max_value = 15.0
step = 1.0
show_percentage = false

[node name="ArmorLbl" type="Label" parent="GUI_Global/Attributes/ArmorBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.5
offset_top = -11.0
offset_right = 21.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("5_8sytb")
theme_override_font_sizes/font_size = 8
text = "0/15"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathIcon" type="TextureRect" parent="GUI_Global/Attributes"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_g6ej4")

[node name="lblPlayerName" type="Label" parent="GUI_Global/Attributes"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 40.0
offset_right = 20.0
offset_bottom = 62.3333
grow_horizontal = 2
grow_vertical = 2
text = "name"
horizontal_alignment = 1

[node name="Highlighter" type="ReferenceRect" parent="GUI_Global"]
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -55.0
offset_right = 15.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
border_color = Color(1, 1, 1, 1)
border_width = 3.0
editor_only = false

[node name="GUI_Local" type="CanvasLayer" parent="."]
layer = 2
visible = false

[node name="Abilities" type="HBoxContainer" parent="GUI_Local"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -294.5
offset_top = -40.0
offset_right = 294.5
grow_horizontal = 2
grow_vertical = 0

[node name="A1" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Pin Down"

[node name="A2" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Double Shot"

[node name="A3" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Band Aid"

[node name="A4" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Piercing Shot"

[node name="A5" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Preparation"

[node name="A6" type="Button" parent="GUI_Local/Abilities"]
layout_mode = 2
focus_mode = 0
text = "Powerful Shot"

[node name="Rolls&Movement" type="PanelContainer" parent="GUI_Local"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -277.0
offset_top = 20.0
offset_right = -152.0
offset_bottom = 144.0
grow_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="GUI_Local/Rolls&Movement"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="GUI_Local/Rolls&Movement/MarginContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="Rolls" type="Label" parent="GUI_Local/Rolls&Movement/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Rolls: 1"

[node name="Movement" type="Label" parent="GUI_Local/Rolls&Movement/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Movement: 1
"

[node name="Portrait&Debuffs" type="PanelContainer" parent="GUI_Local"]
custom_minimum_size = Vector2(196, 191.685)
offset_left = 20.0
offset_top = 20.0
offset_right = 140.0
offset_bottom = 140.0

[node name="MarginContainer" type="MarginContainer" parent="GUI_Local/Portrait&Debuffs"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("7_yad41")
expand_mode = 1
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(188, 60)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Buffs" type="GridContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[node name="PanelContainer2" type="PanelContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Debuffs" type="GridContainer" parent="GUI_Local/Portrait&Debuffs/MarginContainer/VBoxContainer/HBoxContainer/PanelContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 4

[connection signal="input_event" from="." to="." method="_input_event"]
[connection signal="pressed" from="GUI_Local/Abilities/A1" to="." method="_on_a_1_pressed"]
[connection signal="pressed" from="GUI_Local/Abilities/A2" to="." method="_on_a_2_pressed"]
[connection signal="pressed" from="GUI_Local/Abilities/A3" to="." method="_on_a_3_pressed"]
[connection signal="pressed" from="GUI_Local/Abilities/A4" to="." method="_on_a_4_pressed"]
[connection signal="pressed" from="GUI_Local/Abilities/A5" to="." method="_on_a_5_pressed"]
[connection signal="pressed" from="GUI_Local/Abilities/A6" to="." method="_on_a_6_pressed"]
